# Resumable

./: CMakeLists.txt  README.md
Core/: CMakeLists.txt  Main.h
Core/Memory/: Allocator.cpp  Allocator.h  ControlHeader.cpp  ControlHeader.h  IO.h  Mapping.cpp  Mapping.h  Memory.cpp  Memory.h
Core/Tasks/: Task.h
Core/Utils/: ScopeGuard.h
Loader/: CMakeLists.txt  loader.cpp
Sandbox/: CMakeLists.txt  main.cpp
